Thu Jul  4 15:51:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_succ): use ONIGENC_MBCLEN_CHARFOUND_P correctly.

	* string.c (rb_str_dump): ditto.

Thu Jul  4 10:04:11 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (): Merge Onigmo 5.13.5 23b523076d6f1161.

	  * [bug]  (thanks Akinori MUSHA and Ippei Obayashi)
	           Fix a renumbering bug in condition regexp with a named
	           capture. [Bug #8583]
	  * [spec] (thanks Akinori MUSHA)
	    Allow ENCLOSE_OPTION in look-behind.

Thu Jul  4 00:36:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (SIGNED_INTEGER_MAX): suppress warning C4146 on VC6.
	  seems a logical ORed expression becomes unsigned.

Thu Jul  4 00:13:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (rb_w32_atomic_cas): call InterlockedCompareExchange
	  directly.

	* ruby_atomic.h (ATOMIC_CAS): fix missing function call.

Wed Jul  3 23:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_CAS): suppress C4022 and C4047 warnings in
	  VC6.  only InterlockedCompareExchange is declared using PVOID.

Wed Jul  3 22:29:20 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (ruby_digit36_to_number_table): Declared.

	* util.c (ruby_digit36_to_number_table): Moved from scan_digits.

	* bignum.c (conv_digit): Use ruby_digit36_to_number_table.

	* pack.c (hex2num): Ditto.

Wed Jul  3 18:12:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (install_dirs): revert DESTDIR prefix by r39841, since
	  it is fixed by r41648.  [ruby-core:55760] [Bug #8115]

Wed Jul  3 14:15:25 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat): use rb_w32_ustati64() in win32.c to get rid of
	  mysterious behavior of FindFirstFile() Windows API which treat "<"
	  and ">" like as wildcard characters.  [ruby-core:55764] [Bug #8597]

Wed Jul  3 12:06:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit): Renamed from calc_hbase and return
	  maxpow.
